[tool.poetry]
name = "incomfortclient"
version = "0.5.0"
description = "An aiohttp-based client for Intergas InComfort/InTouch Lan2RF systems."
authors = ["Jan Bouwhuis <jan@jbsoft.nl>"]
maintainers = ["Jan Bouwhuis <jan@jbsoft.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jbouwh/incomfort-client"
repository = "https://github.com/jbouwh/incomfort-client"
documentation = "https://github.com/jbouwh/incomfort-client"
keywords = ["incomfort", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Home Automation",
]
packages = [
    { include = "incomfortclient", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
aioresponses = ">=0.7.6"
black = "^24.4.2"
debugpy = "^1.8.1"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
flake8-docstrings = "^1.7.0"
isort = "^5.13.2"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
pyflakes = "^3.2.0"
pytest-asyncio = "^0.23.7"
pytest-aiohttp = "^1.0.5"
pytest-cov = "^5.0.0"
pytest-freezer = "^0.4.8"
pytest-socket = "^0.7.0"
pytest-sugar = "^1.0.0"
pytest-timeout = "^2.3.1"
pytest-unordered = "^0.6.0"
pytest-picked = "^0.5.0"
pytest-xdist = "^3.6.1"
pytest = "^8.2.2"
pytest-github-actions-annotate-failures = "^0.2.0"
pylint = "^3.2.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jbouwh/incomfort-client/issues"
Changelog = "https://github.com/jbouwh/incomfort-client/releases"

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["incomfortclient"]

[tool.pylint.MASTER]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "format",
  "abstract-method",
  "cyclic-import",
  "duplicate-code",
  "global-statement",
  "inconsistent-return-statements",
  "locally-disabled",
  "not-an-iterable",
  "not-context-manager",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "unnecessary-pass",
  "unused-argument",
]

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.TYPECHECK]
ignored-classes = "_CountingAttr"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ["Exception"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
  profile = "black"
  multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = [
  "."
]